changed structure, divided methodology in two chapters and made changes accordingly

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -712,7 +712,7 @@ Due to their proprietary nature, HomeKit and NEST are the most distant from open
 \paragraph{Summary.} This chapter introduced six smart home applications which cover overlapping use cases, but follow distinct approaches in terms of security. Nest and HomeKit, particularly, take advantage of their hardware to enforce an additional layer of authentication and integrity protection, respectively. OpenRemote had an initiative to support public key infrastructure among peers inside the smart home ecosystem. ThingsBoard, although a more general solution for IoT, offered support for token-based credentials its compatible protocols. The Thing System incorporated a mechanism to enforce access control after the first user got registered through a time-based one-time password. Finally, Home Assistant has the capability to expose itself to Tor, thus maintaining privacy. 
 
 \newpage
-\section{Methodology}
+\section{Security Challenges in openHAB}
 \label{sec:method}
 
 As a first step towards analyzing the security of IoT models, architectures, and applications, a brief study on the state of the art was conducted. From the reviewed literature, security challenges and threats in IoT were identified, along with possible countermeasures that provide data confidentiality, peer authentication, non-repudiation, etc. However, the studied proposals tended to oversimplify and deviate from the issues present in real-world, customer-ready solutions. This observation made it clear that there was a disconnect from academic publications and commercial software. Most products, however, do not make public their internal components, and tend to make their own architectural decisions instead of following standards for, e.g.\ encoding data transmitted between things. Among the existing solutions for a smart environment, the openHAB smart home software was chosen as a case study in terms of security. The decision was made for various reasons: first, it is open-source, and thus it is possible to conduct white-box testing, secondly, it is vendor-agnostic, and finally, because of the active participation of the community in this project.
@@ -820,7 +820,14 @@ Figure \ref{fig:misuse_cases} shows on the left side the use cases extracted fro
 \end{center}
 \end{figure}
 
-\subsection{Proposed Token-Based Authentication Procedure}
+\paragraph{Summary.} This chapter showed the security challenges present in openHAB. First, the security of openHAB was analyzed at a communication level between things, the openHAB instance, and remote REST APIs. Then, openHAB design decisions about ``Intranet of Things'' were discussed. Next, the long-time held community discussion about authentication and access control was introduced, and its points were summarized. Finally, misuse cases were written to illustrate possible security threats and adversaries. Mitigation strategies were given accordingly. 
+
+\newpage
+\section{Proposed Security Mechanisms}
+
+Security in openHAB may be improved through the implementation of access control mechanisms. Access control requires, as a prerequisite, a reliable client authentication mechanism. This chapter proposes a suitable implementation of a JSON Web Token authenticator for Eclipse SmartHome, the core framework of openHAB. As one of the components of an access control system, an authorization model has to be defined before a security policy can be enforced. Thus, an authorization model suitable for the smart home ecosystem is proposed as part of the contributions for openHAB.
+
+\subsection{Token-Based Authentication Procedure}
 
 On 15th February, 2018, a videocall meeting was held by the interested parties in the community with the purpose of clarifying the requirements gathered in the document mentioned in chapter \ref{ssec:discussion}, and set priorities accordingly. Part of the discussion also meant to address how previously attempted solutions might be of use for the future implemention of authentication and access control. Among the most relevant agreed points was the use of JSON Web Tokens (JWT) for stateless authentication. Stateless authentication inherently reduce the effort needed to manage user sesions in the backend, thus the idea was supported. It was also decided that the specifics of the access control mechanisms could be decided at a later point in time, since the most important priority was adding authentication to the Eclipse SmartHome framework. Therefore, further effort in this work was directed toward the implementation of a JWT-based authentication mechanism compatible with the Eclipse SmartHome architecture, and thus, possibly compatible also with the openHAB software stack.
 
@@ -992,10 +999,7 @@ Table~\ref{tbl:autho_cap} shows a sample assignment of capability sets to some u
 
 The proposed authorization model fulfills the purpose noted at the beginning of this chapter: satisfying security usability and fine-grained access control. Through the assignation of capability sets, users are capable of setting the permissions without troubling themselves with complex configuration options. Moreover, through the definition of the operations involved in a capability set, the developer of a particular binding or component of Eclipse SmartHome or openHAB is able to implement the access control policy.
 
-\paragraph{Summary.} This chapter showed in detail the heart of the contributions made in this work for Eclipse SmartHome and consequently, openHAB. First, the security of openHAB was analyzed at a communication level between things, the openHAB instance, and remote REST APIs. Then, openHAB design decisions about ``Intranet of Things'' were discussed. Later, the long-time held community discussion about authentication and access control was introduced, and its points were summarized. As an important contribution to securing openHAB, a JWT authenticator was implemented in Java according to the OSGi architecture. Finally, a fine-grained, yet usable authorization model that uses the concept of capability sets was proposed for the smart home ecosystem.
-
-\newpage
-\section{Evaluation}
+\subsection{Evaluation}
 \label{sec:eval}
 
 As one of the main contributions for this work, the basic and JSON Web Token-based authenticators were implemented as a bundle for the OSGi runtime used in Eclipse SmartHome (ESH). This chapter looks at the resulting authentication bundle and how it is used alongside the other bundles for the ESH distribution. Recall that the ESH framework is a core component for the openHAB automation software. Thus, if the solution does not work in ESH, it will not work on openHAB.
@@ -1010,7 +1014,7 @@ Up to the experimentation of the basic-authentication, everything was replicated
 
 Essentially, the implementation of the basic and JWT authenticators was successfully deployed into the OSGi runtime in Karaf. The testing of the deployment showed no flaws when initiating HTTP requests via curl or the web browser. The deployment of the basic authenticator for the OSGi runtime in ESH was succesfully replicated. It effectively prevent unauthorized access to a servlet resource. However, the deployment of the JWT authenticator for ESH ran into class-loading problems, and thus its effective functioning could not be verified.
 
-\paragraph{Summary.} In essence, the proposed implementation of basic and JWT authenticators for the ESH ecosystem was evaluated in two steps. A stand-alone, OSGi-based ecosystem running in Karaf was used as the first step of evaluation. As this was an independent deployment, there were no class-loading issues with the third-party library used for JWT verification, Nimbus. The JWT and basic authenticators worked as proposed in this deployment. The second stage of evaluation was made within the ESH ecosystem. In this deployment, class-loading issues were found within ESH that impeded the use of Nimbus. Thus, only the basic authenticator for securing servlet resources could be successfully tested in this environment.
+\paragraph{Summary.} This chapter showed in detail the heart of the contributions made in this work for Eclipse SmartHome and consequently, openHAB. As an important contribution to securing openHAB, a JWT authenticator was implemented in Java according to the OSGi architecture. Finally, a fine-grained, yet usable authorization model that uses the concept of capability sets was proposed for the smart home ecosystem. Afterward, the proposed implementation of basic and JWT authenticators for the ESH ecosystem was evaluated in two steps. A stand-alone, OSGi-based ecosystem running in Karaf was used as the first step of evaluation. As this was an independent deployment, there were no class-loading issues with the third-party library used for JWT verification, Nimbus. The JWT and basic authenticators worked as proposed in this deployment. The second stage of evaluation was made within the ESH ecosystem. In this deployment, class-loading issues were found within ESH that impeded the use of Nimbus. Thus, only the basic authenticator for securing servlet resources could be successfully tested in this environment.
 
 \newpage
 \section{Conclusion and Future Research Directions}
