corrections from yet another proofreading iteration

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -52,6 +52,21 @@ note = {Date accessed: 2018-02-15},
 howpublished = {\url{https://www.owasp.org/index.php/OWASP_Internet_of_Things_Project}}
 }
 
+@techreport{RFC6750,
+ author = {M. Jones and D. Hardt},
+ title = {{The OAuth 2.0 Authorization Framework: Bearer Token Usage}},
+ howpublished = {Internet Requests for Comments},
+ type = {RFC},
+ number = {6750},
+ year = {2012},
+ month = {October},
+ issn = {2070-1721},
+ publisher = {RFC Editor},
+ institution = {RFC Editor},
+ url = {http://www.rfc-editor.org/rfc/rfc6750.txt},
+ note = {\url{http://www.rfc-editor.org/rfc/rfc6750.txt}},
+}			
+
 @techreport{RFC7617,
 author = {J. Reschke},
 title = {{The 'Basic' HTTP Authentication Scheme}},
