made corrections as suggested by Elisa and Daniel

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -26,7 +26,7 @@ howpublished = {\url{https://stackoverflow.com/a/26778123}}
 @article{misuse,
 author = {Sindre, Guttorm and Opdahl, Andreas},
 year = {2018},
-month = {05},
+month = {May},
 title = {{Capturing security requirements through misuse cases}}
 }
 
@@ -105,7 +105,7 @@ note = {Date accessed: 2018-05-05}
 author = {Tae Kim, Jung},
 year = {2015},
 month = {10},
-pages = {201-208},
+pages = {201--208},
 title = {{Requirement of Security for IoT Application based on Gateway System}},
 volume = {9},
 booktitle = {International Journal of Security and Its Applications}
@@ -116,7 +116,7 @@ title = "Internet of Things security: A survey",
 journal = "Journal of Network and Computer Applications",
 volume = "88",
 number = "Supplement C",
-pages = "10 - 28",
+pages = "10--28",
 year = "2017",
 issn = "1084-8045",
 doi = "https://doi.org/10.1016/j.jnca.2017.04.002",
@@ -148,7 +148,7 @@ title = "Energy-efficient mechanisms in security of the internet of things: A su
 journal = "Computer Networks",
 volume = "127",
 number = "Supplement C",
-pages = "173 - 189",
+pages = "173--189",
 year = "2017",
 issn = "1389-1286",
 doi = "https://doi.org/10.1016/j.comnet.2017.08.006",
@@ -166,7 +166,7 @@ number = {16},
 issn = {1099-1131},
 url = {http://dx.doi.org/10.1002/dac.3323},
 doi = {10.1002/dac.3323},
-pages = {e3323--n/a},
+pages = {e3323},
 keywords = {biometrics, IoT, key agreement, remote user authentication, security},
 year = {2017},
 note = {e3323 IJCS-16-0515.R1},
@@ -213,7 +213,7 @@ note = {e3323 IJCS-16-0515.R1},
 title = "Just a Smart Home or Your Smart Home – A Framework for Personalized User Interfaces Based on Eclipse Smart Home and Universal Remote Console",
 journal = "Procedia Computer Science",
 volume = "98",
-pages = "107 - 116",
+pages = "107--116",
 year = "2016",
 note = "The 7th International Conference on Emerging Ubiquitous Systems and Pervasive Networks (EUSPN 2016)/The 6th International Conference on Current and Future Trends of Information and Communication Technologies in Healthcare (ICTH-2016)/Affiliated Workshops",
 issn = "1877-0509",
@@ -492,7 +492,7 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 title = "Access control in the Internet of Things: Big challenges and new opportunities",
 journal = "Computer Networks",
 volume = "112",
-pages = "237 - 262",
+pages = "237--262",
 year = "2017",
 issn = "1389-1286",
 doi = "https://doi.org/10.1016/j.comnet.2016.11.007",
@@ -509,7 +509,7 @@ and Gorrieri, Roberto",
 title="Access Control: Policies, Models, and Mechanisms",
 booktitle="Foundations of Security Analysis and Design",
 year="2001",
-publisher="Springer Berlin Heidelberg",
+publisher="Springer",
 address="Berlin, Heidelberg",
 pages="137--196",
 abstract="Access control is the process of mediating every request to resources and data maintained by a system and determining whether the request should be granted or denied. The access control decision is enforced by a mechanism implementing regulations established by a security policy. Different access control policies can be applied, corresponding to different criteria for defining what should, and what should not, be allowed, and, in some sense, to different definitions of what ensuring security means. In this chapter we investigate the basic concepts behind access control design and enforcement, and point out different security requirements that may need to be taken into consideration. We discuss several access control policies, and models formalizing them, that have been proposed in the literature or that are currently under investigation.",
@@ -517,14 +517,15 @@ isbn="978-3-540-45608-7"
 }
 
 @book{whitman2011principles,
-  title={Principles of Information Security},
-  author={Whitman, M.E. and Mattord, H.J.},
-  isbn={9781111138219},
-  lccn={2010940654},
-  url={https://books.google.ee/books?id=L3LtJAxcsmMC},
-  year={2011},
-  publisher={Cengage Learning}
+ author = {Whitman, Michael E. and Mattord, Herbert J.},
+ title = {Principles of Information Security},
+ year = {2011},
+ isbn = {9781111138219},
+ edition = {4th},
+ publisher = {Course Technology Press},
+ address = {Boston, MA, United States},
 }
+       
 
 @article{whitman2003,
  author = {Whitman, Michael E.},
@@ -551,7 +552,7 @@ title = "Estimating the market impact of security breach announcements on firm v
 journal = "Information \& Management",
 volume = "46",
 number = "7",
-pages = "404 - 410",
+pages = "404--410",
 year = "2009",
 issn = "0378-7206",
 doi = "https://doi.org/10.1016/j.im.2009.06.005",
