fixed estonian abstract and curriculum

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -212,7 +212,7 @@
 \large
 UNIVERSITY OF TARTU\\%[2mm]
 Institute of Computer Science\\
-Security and Mobile Computing Curriculum\\%[2mm]
+Computer Science Curriculum\\%[2mm]
 }{%
 TARTU ÜLIKOOL\\
 Arvutiteaduse instituut\\
@@ -299,7 +299,7 @@ Internet of Things, IoT, smart home, openHAB, Eclipse SmartHome, JSON Web Token,
 %=== Info in Estonian
 \newcommand\EstInfo{{%
 \selectlanguage{estonian}
-\noindent\textbf{\large OpenHAB-põhise Targa Kodu Turvamine Kasutajate Autentimise ning Autoriseerimise abil}
+\noindent\textbf{\large OpenHAB-põhise targa kodu turvamine kasutajate autentimise ning autoriseerimise abil}
 \vspace*{1ex}
 
 \noindent\textbf{Lühikokkuvõte:} 
