changed evaluation results because classloading problems were fixed!

--- a/master-thesis.tex
+++ b/master-thesis.tex
@@ -1013,13 +1013,15 @@ The first successful attempt at implementing the authenticators was made outside
 
 Accessing the servlet resource through e.g.\ curl, without any credentials, gets a response: ``HTTP ERROR 401. Problem accessing /whitefiltered. Reason: Unauthorized''. Passing the hard-coded, valid credentials by adding the \texttt{-u} parameter to curl gets a \texttt{200 OK} response from the web server. If the servlet was accessed from a web browser, then the server returns a cookie alongside the response. This cookie, a very long string, is where the JSON Web Token is stored. In subsequent HTTP requests, the cookie is sent to the server to perform JWT authentication. The response by the servlet does not change, however, so by observing the Karaf log in \texttt{/system/console/log} it can be confirmed that the JWT authentication worked flawlessly. JWT revokation due to expiration is not implemented, and therefore the same token may be reused as long as the same RSA key is being used by the server to verify the signature of the JWT.
 
-The next step in the evaluation of the implementation was to relocate the authentication logic into the core bundles of the Eclipse SmartHome. A similar procedure was followed as in the first step, except that the bundle was built from the package \texttt{org.eclipse.smarthome.auth.jwt}. First, the logic for basic authentication was put into a custom \texttt{HttpContext} as before. A test resource servlet was also included in this bundle. The activator, however, used the \texttt{HttpService} and \texttt{ServiceTracker} to register the servlet and custom context as an HTTP service in the OSGi runtime. For the previous deployment, the registration was made under the whiteboard pattern supported by OSGi 6 implementations.
+The next step in the evaluation of the implementation was to relocate the authentication logic into the core bundles of the Eclipse SmartHome. A similar procedure was followed as in the first step, with mostly two main differences: resource registration and inclusion of third-party libraries. In accordance with the project structure, the bundle was built from the package \texttt{org.eclipse.smarthome.auth.jwt}. First, the logic for basic authentication was put into a custom \texttt{HttpContext} as before. A test resource servlet was also included in this bundle. The bundle activator used the \texttt{HttpService} and \texttt{ServiceTracker} to register the servlet and custom context as an HTTP service in the OSGi runtime. This procedure was followed per the limitations of the ESH runtime version.
 
-Up to the experimentation of the basic authentication, everything was replicated exactly under the ESH environment. However, when attempting to include the third-party library, Nimbus, problems started to arise. Particularly, a persistent class-loading problem for this library could not be solved, not even with the support of a very active developer of the Eclipse SmartHome and openHAB. The exact error is as follows: \texttt{Missing constraint: Import-Package: com.nimbusds.jose}, which suggests that the JAR file is not recognized by the runtime. The usual approach for including third-party libraries into a bundle for ESH is to create a \texttt{lib} directory in the root of the bundle, and put the respective JAR there. Then, the \texttt{build.properties} and \texttt{MANIFEST.MF} files have to be changed to load the classes from the JAR. This same approach has been followed in other bundles in the ESH distribution, such as the \texttt{org.eclipse.smarthome.model.persistence} bundle. However, not even replicating the same structure as this other bundle made it possible to recognize the Nimbus JAR.
+Recall that the library \emph{Nimbus} is used for JWT generation and verification. Nimbus, itself, depends on other third-party libraries: JCIP Annotations, JSON Smart, and BouncyCastle. Unlike the deployment under Karaf, dependencies have to be manually included into the class path, and this includes \emph{deep} dependencies. In this case, the JAR files of the dependencies were put into a \texttt{lib} directory in the root of the bundle, as it is done in other bundles of ESH. However, class-loading problems were initially encountered. The problems were solved by adding the JAR locations in three files found inside the bundle: \texttt{build.properties}, \texttt{MANIFEST.MF}, and \texttt{.classpath}.
 
-Essentially, the implementation of the basic and JWT authenticators was successfully deployed into the OSGi runtime in Karaf. The testing of the deployment showed no flaws when initiating HTTP requests via curl or the web browser. The deployment of the basic authenticator for the OSGi runtime in ESH was succesfully replicated. It effectively prevent unauthorized access to a servlet resource. However, the deployment of the JWT authenticator for ESH ran into class-loading problems, and thus its effective functioning could not be verified.
+Finally, the modified ESH was deployed on the port 8080, and the evaluation in this phase was done by accessing the \texttt{/test} path, i.e., \texttt{localhost:8080/test}. As in the previous phase, basic authentication was first requested by the web browser. Once credentials were provided, a JWT was generated and delivered to the client, and thereafter, access was granted to the test resource. The JWT was stored in a cookie on the client side, which was used for other subsequent requests to the same resource.
 
-\paragraph{Summary.} This chapter showed in detail the heart of the contributions made in this work for Eclipse SmartHome and consequently, openHAB. As an important contribution to securing openHAB, a JWT authenticator was implemented in Java according to the OSGi architecture. Finally, a fine-grained, yet usable authorization model that uses the concept of capability sets was proposed for the smart home ecosystem. Afterward, the proposed implementation of basic and JWT authenticators for the ESH ecosystem was evaluated in two steps. A stand-alone, OSGi-based ecosystem running in Karaf was used as the first step of evaluation. As this was an independent deployment, there were no class-loading issues with the third-party library used for JWT verification, Nimbus. The JWT and basic authenticators worked as proposed in this deployment. The second stage of evaluation was made within the ESH ecosystem. In this deployment, class-loading issues were found within ESH that impeded the use of Nimbus. Thus, only the basic authenticator for securing servlet resources could be successfully tested in this environment.
+Essentially, the implementation of the basic and JWT authenticators was successfully deployed into the Karaf and ESH OSGi runtimes. The testing of the deployment showed no flaws when initiating HTTP requests via curl or the web browser. It effectively prevented unauthorized access to a servlet resource if valid credentials or JWT were not provided.
+
+\paragraph{Summary.} This chapter showed in detail the heart of the contributions made in this work for Eclipse SmartHome and consequently, openHAB. As an important contribution to securing openHAB, a JWT authenticator was implemented in Java according to the OSGi architecture. Finally, a fine-grained, yet usable authorization model that uses the concept of capability sets was proposed for the smart home ecosystem. Afterward, the proposed implementation of basic and JWT authenticators for the ESH ecosystem was evaluated in two steps. A stand-alone, OSGi-based ecosystem running in Karaf was used as the first step of evaluation. The JWT and basic authenticators worked as proposed in this deployment with no issues. The second stage of evaluation was made within the ESH ecosystem. In this deployment, \texttt{Http Service} and \texttt{Tracker} were used to register the servlet resource. Some class-loading problems for Nimbus and its dependencies were encountered, but were solved by modifying the configuration files of the bundle. Under the basic and JWT authenticators, the servlet resource was successfully secured under this environment.
 
 \newpage
 \section{Conclusion and Future Research Directions}
@@ -1028,15 +1030,13 @@ This work gave an overview of the security challenges present in applications fo
 
 \subsection{Contributions}
 
-As one of the main contributions, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered resource servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource was either allowed or forbidden. Based on this behavior, the authentication logic via a JSON Web Token was implemented within the aforementioned method. In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which demanded credentials from the client's web browser as a prompt. The evaluation was performed in two stages. The first stage was made outside the ESH runtime, in an isolated OSGi environment, under Karaf as container. Both the basic and JWT authenticators were effectively able to authenticate incoming HTTP requests to the servlet. First time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed. The second stage of the evaluation made use of the same authentication logic, but deployed under the ESH OSGi runtime. Due to class-loading problems, the JWT authenticator was not able to be tested. However, the basic authenticator, which did not depend on external libraries, effectively restricted access to the servlet resource if the credentials were not provided in the header of the HTTP request.
+As one of the main contributions, a custom \texttt{HttpContext} was successfully implemented to intercept all incoming requests toward the registered resource servlet. Depending on the value returned by the \texttt{handleSecurity} method, access to a resource was either allowed or forbidden. Based on this behavior, the authentication logic via a JSON Web Token was implemented within the aforementioned method. In the evaluation of this first step, JWT authentication was successfully enforced for all client requests to the servlet: clients with an invalid token, or with no token at all were denied access to the servlet resource. As the second step of the implementation, a secondary \emph{basic} authenticator was implemented which demanded credentials from the client's web browser as a prompt. The evaluation was performed in two stages. The first stage was made outside the ESH runtime, in an isolated OSGi environment, under Karaf as container. Both the basic and JWT authenticators were effectively able to authenticate incoming HTTP requests to the servlet. First time clients were always asked for credentials to authenticate, and then further requests transitioned into the JWT authentication. Thus, only when the client provided either valid basic credentials or JWT, access to the servlet resource was allowed. The second stage of the evaluation made use of the same authentication logic, but deployed under the ESH OSGi runtime. Although there were differences in the registration of the servlet resources, the authentication logic was untouched. Employing the basic and JWT authenticators effectively restricted access to the servlet resource if the credentials were not provided in the header of the HTTP request.
 
 The second contribution for Eclipse SmartHome and openHAB was the proposal of a fine-grained, yet usable authorization model. This model was inspired by the RBAC and CapAC models, and adjusted accordingly to fit within the smart home paradigm. Most importantly, the concept of \emph{capability sets} is used to encompass resources and functionalities of the smart home ecosystem. Users get assigned capability sets to reflect an access control policy that maps the authority of a user to specific capabilities of the smart home ecosystem. A capability set could be defined as part of the definition of a binding, for example.
 
 \subsection{Future Research Directions}
 
-There are several endeavors in terms of implementation that may be considered for future work. The most apparent one is related to the class-loading problems in Eclipse SmartHome that impede the use of a third-party library for JWT generation and verification. Otherwise, it could also be considered to implement a JWT generator and verifier using the tools provided by the native Java API.
-
-Furthermore, for the sake of usability, it could be considered to implement a form-based authentication mechanism compatible with the implemented authenticators. After all, due to the architecture of Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication.
+There are several endeavors in terms of implementation that may be considered for future work. For the sake of usability, it could be considered to implement a form-based authentication mechanism compatible with the implemented authenticators. After all, due to the architecture of Eclipse SmartHome, it is not trivial to plug-in a redirect from every resource to a web form for authentication.
 
 In terms of JWT management and forward-security, it would be desirable to have an expiration date for the generated JSON Web Tokens. For this, a renewal procedure should be implemented. If the token has already expired, then credentials would be requested once again through an encrypted transport (e.g., HTTPS). Additionally, it could also be considered to encrypt the JWT according to the specification, for the sake of adding another layer of confidentiality protection.
 
