--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -75,6 +75,7 @@
 }
 
 \usepackage{graphicx} % Allows including images
+\graphicspath{{../fig/}}
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 
 
@@ -90,7 +91,7 @@
   UNIVERSITY OF TARTU\\[3mm]
   Institute of Computer Science\\
   Security and Mobile Computing Curriculum\\[3mm]  
-  \includegraphics[height=3cm]{../fig/UT_logo}
+  \includegraphics[height=3cm]{UT_logo}
 }
 
 \date{\fecha} % Date, can be changed to a custom date
@@ -115,17 +116,25 @@
 %------------------------------------------------
 \begin{frame}
 \frametitle{Introduction: Internet of Things}
+\textbf{Internet of Things.} Dynamic and heterogenous environment where \emph{sensing} devices interact with each other. 
 \begin{itemize}
-  \setlength\itemsep{1.5em}
-\item alo polisia
+\setlength\itemsep{1.5em}
+\item Devices: smartphones, smart watches, smoke alarm, security camera, heartbeat and temperature monitor, etc.
+\item Applications: Smart home, smart transportation, smart healthcare, intelligent transportation, etc.
+\item Challenges: interoperability, architecture, device naming, usability, security and privacy.  
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
 \frametitle{A Smart Home Application: OpenHAB}
+\textbf{``a vendor and technology agnostic open source automation software for your home''}~\cite{oh_01}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item May be deployed on very modest devices (e.g., Raspberry Pi)
+\item Mostly works without an Internet connection.
+\item Uses thing-specific \emph{bindings} to connect to devices.
+\item Made up of individual projects, e.g.\ Eclipse SmartHome.
+\item Written in Java under the OSGi architecture. 
 \end{itemize}
 \end{frame}
 %------------------------------------------------
@@ -133,7 +142,9 @@
 \frametitle{Problem Statement}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item To review the existing security mechanisms of the openHAB smart home automation software.
+\item To study and implement a JSON Web Token-based authenticator for Eclipse SmartHome, the core of openHAB, as a base for access control mechanisms.
+\item To propose a usable authorization model to manage access permissions to things and resources in openHAB. 
 \end{itemize}
 \end{frame}
 %------------------------------------------------
@@ -141,62 +152,123 @@
 \frametitle{Motivation}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item Developments of IoT applications focus mostly on functional requirements, leaving usability, performance, security, etc., for later.
+\item Consequences in smart home range from mere user discomfort to identity theft, or worse.
+\item Lack of security deters adoption of IoT applications, halts progress. 
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
-\frametitle{Objectives} % contributions?
-\begin{itemize}
+\frametitle{Contributions} % objectives?
+\begin{enumerate}
   \setlength\itemsep{1.5em}
-\item alo polisia
-\end{itemize}
+\item Analysis of the security mechanisms in use for the openHAB automation software.
+\item Implementation of a client authenticator based on the JSON Web Token for Eclipse Smarthome.
+\item Proposal of a fine-grained, yet usable authorization model for openHAB to manage usage permissions.
+\end{enumerate}
 \end{frame}
 %------------------------------------------------
 \section{Security Challenges in OpenHAB}
 \begin{frame}
+\frametitle{Security Challenges in OpenHAB}
+\begin{itemize}
+  \setlength\itemsep{1.5em}
+\item Intranet of Things
+\item Bindings
+\item Access Control
+\end{itemize}
+\end{frame}
+%------------------------------------------------
+\begin{frame}
 \frametitle{Intranet of Things}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item Aims to contain private data locally.
+\item Puts a limitation on use cases.
+\item Assumes security of the private network.
+\item Secure remote access: a challenge.
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
 \frametitle{Security of Bindings}
+\textbf{Binding.} Logical modules to support inter-device interaction inside openHAB.
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item Each binding is defined for things that use a certain protocol, e.g.: KNX, Z-Wave, ZigBee, Panasonic TV, etc.
+\item Some bindings use an API for remote connection to the vendor.
+\item Remote communication may be done under HTTPS if specified by binding.
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
-\frametitle{Community Discussion and Remarks}
+\frametitle{Access Control}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item Whoever gains access to private network gains access to smart home management.
+\item Long-discussed topic in the openHAB community.
+\item Not trivial: previous attempts have failed.
+\item Preferably to be implemented inside the core framework: Eclipse SmartHome.
+\item Main challenge: single \emph{authentication context} recognizable in all end points (servlets).
+\item Community discussion led to a requirements document.
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
 \frametitle{Misuse Cases}
-\begin{itemize}
-  \setlength\itemsep{1.5em}
-\item alo polisia
-\end{itemize}
+
+\begin{figure} [ht] 
+\begin{center}
+\includegraphics[width=0.75\textwidth]{esh_misuse_cases}
+\caption{Misuse Cases for Access Control in ESH.}
+\label{fig:misuse_cases}
+\end{center}
+\end{figure}
+
 \end{frame}
 %------------------------------------------------
 \section{Proposed Security Mechanisms}
 \begin{frame}
-\frametitle{Token-based Authentication Procedure}
+\frametitle{Proposed Security Mechanisms}
 \begin{itemize}
   \setlength\itemsep{1.5em}
-\item alo polisia
+\item JSON Web Token-based Authenticator
+\item RBAC-inspired Authorization Model
 \end{itemize}
 \end{frame}
 %------------------------------------------------
 \begin{frame}
+\frametitle{Token-based Authentication Procedure}
+\begin{figure} [ht] 
+\begin{center}
+\includegraphics[width=0.6\textwidth]{esh_auth_sequence}
+\caption{Addition of authenticators into the architecture.}
+\label{fig:esh_arch_authenticator}
+\end{center}
+\end{figure}
+\end{frame}
+%------------------------------------------------
+\begin{frame}
+\frametitle{Architectural Implications}
+\begin{figure} [ht] 
+\begin{center}
+\includegraphics[width=0.8\textwidth]{esh_arch_authenticator}
+\caption{Addition of authenticators into the architecture.}
+\label{fig:esh_arch_authenticator}
+\end{center}
+\end{figure}
+\end{frame}
+%------------------------------------------------
+\begin{frame}
 \frametitle{Implementation of Authenticators}
+\begin{itemize}
+  \setlength\itemsep{1.5em}
+\item Custom http context....
+\end{itemize}
+\end{frame}
+%------------------------------------------------
+\begin{frame}
+\frametitle{Proposed Authorization Model}
 \begin{itemize}
   \setlength\itemsep{1.5em}
 \item alo polisia
@@ -205,14 +277,6 @@
 %------------------------------------------------
 \begin{frame}
 \frametitle{Evaluation}
-\begin{itemize}
-  \setlength\itemsep{1.5em}
-\item alo polisia
-\end{itemize}
-\end{frame}
-%------------------------------------------------
-\begin{frame}
-\frametitle{Proposed Authorization Model}
 \begin{itemize}
   \setlength\itemsep{1.5em}
 \item alo polisia
